--- a/login-v1/style.css
+++ b/login-v1/style.css
@@ -1,6 +1,10 @@
 *{ margin: 0; padding: 0; }
 body{
-  widht: 100vw;
+  width: 100vw;
   height: 100vh;
   background-color: blue;
+}
+
+.container{
+  max-width: 500px !important;
 }
